[tool.poetry]
name = "etf4u"
version = "0.1.0"
description = ""
authors = ["Leonardo Cavaletti <impeto.blu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
rich = "^9.10.0"
lxml = "^4.6.2"

[tool.poetry.dev-dependencies]
taskipy = "^1.6.0"
black = "^20.8b1"

[tool.taskipy.tasks]
start = "python etf4u"
freeze = "poetry export -f requirements.txt > requirements.txt"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
